# 2023-ai-final

./: .gitignore  .lfsconfig  README.md
jigsaw-diffusion/: README.md  pyproject.toml
jigsaw-diffusion/jigsaw_diffusion/: gaussian_diffusion.py  image_datasets.py  jigsaw_datasets.py  jigsaw_script_util.py  jigsaw_train_util.py  jigsaw_unet.py  sample.py  testnorm.py  train.py  unet.py
kaggle-jigsaw-process/: pyproject.toml
kaggle-jigsaw-process/preprocess/: main.py
log/: .gitattributes  .gitignore  ema_0.9999_000000.pt  ema_0.9999_010000.pt  ema_0.9999_020000.pt  ema_0.9999_030000.pt  ema_0.9999_040000.pt  log.txt  model000000.pt  model010000.pt  model020000.pt  model030000.pt  model040000.pt  opt000000.pt  opt010000.pt  opt020000.pt  opt030000.pt  opt040000.pt  progress.csv
piecemaker-preprocess/: pyproject.toml
puzzle-generator/: pyproject.toml
puzzle-generator/puzzle_generator/: main.py
scripts/: 00_download-dataset.sh  00_generate-dataset.sh  01_preprocess.sh  01_train.sh  02_sample.sh
