[tool.poetry]
name = "piecemaker-preprocess"
version = "0.1.0"
description = ""
authors = ["aeon <jerry73204@gmail.com>"]
readme = "README.md"
packages = [{include = "piecemaker_preprocess"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0.72"
svglib = "^1.5.1"
svgpathtools = "^1.6.1"
json5 = "^0.9.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
main = "piecemaker_preprocess.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
